# SQA_MAS

./: .dockerignore  .gitignore  Dockerfile.sandbox  api.py  main.py  orchestrator.py  pyproject.toml
agents/: base.py  code_analysis.py  regression.py  reporting.py  sanity.py  validation.py
frontend/: package-lock.json
frontend/src/: App.jsx  index.css
templates/: report_template.md.j2
utils/: llm.py  sandbox.py
