[project]
name = "sqa-mas"
version = "0.1.0"
description = "Autonomous Software Quality Assurance Multi-Agent System"
authors = [
    { name = "Developer" }
]
requires-python = ">=3.11"
dependencies = [
    "radon>=6.0.1",
    "bandit>=1.7.9",
    "pydantic>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "click>=8.1.7",
    "pytest>=8.0.0",
    "coverage>=7.0.0",
    "openapi-spec-validator>=0.7.0",
    "jinja2>=3.1.3",
    "groq>=0.5.0",
    "docker>=7.0.0",
    "tenacity>=8.3.0",
    "python-dotenv>=1.0.1"
]

[project.scripts]
sqa-mas = "main:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "orchestrator"]
packages = ["agents", "utils"]
